@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.571 2003/01/02 03:56:16 jonnymind Exp $
+ * $Id: ChangeLog,v 1.572 2003/01/02 04:51:30 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-01-02 07:01 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
+  * source/rtl/inet.c
+    * removed warning when not compiling with thread support
+
+  * include/inet.h
+    ! Fixed compilation ( unresolved SD_BOTH ) on some BCC installations.
 
 2003-01-02 05:44 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * source/vm/thread.c
